--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            WEBAPPS_LAB_03
-</title>
-Tarun Yada
+        <title>WEBAPPS_LAB_03</title>
+        Tarun Yada
     </head>
 </html>
