--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>WEBAPPS_LAB_03</title>
-        Tarun Yada
+        <h1>Tarun Yada</h1> 
     </head>
     <body>
 
