--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <h1>Tarun Yada</h1> 
     </head>
     <body>
+        <h6>Hyderbad</h6>
+        <p><b>Hyderbad</b> is my favourite vaccation spot.
+            Their are so many tourist places and resouts in Hyderbad,
+            The fitst tourist place that exists me in Hyderbad is <b>Charminar</b> 
+            later on its go to <b>Golkunda Fort</b> and <b> Ramoji_Filmcity</b> 
+            
+        </p>
 
     </body>
 </html>
