--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
             The fitst tourist place that exists me in Hyderbad is <b>Charminar</b> 
             later on its go to <b>Golkunda Fort</b> and <b> Ramoji_Filmcity</b>
         </p>
+        <ol>
+            <b>Order List for traditional places temples in Hyderbad</b>
+            <hr>
+            <li>Birlamandir temple</li>
+            <li>yadagirigutta temple</li>
+            <li>chilkur balaji temple</li>
+        </ol>
+        
 
     </body>
 </html>
