--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
             later on its go to <b>Golkunda Fort</b> and <b> Ramoji_Filmcity</b>
         </p>
         <ol>
-            <b>Order List for traditional places temples in Hyderbad</b>
-            <hr>
+            <b>Ordered List of famous temples vist in Hyderbad</b>
+         <hr>
             <li>Birlamandir temple</li>
             <li>yadagirigutta temple</li>
             <li>chilkur balaji temple</li>
         </ol>
-        
+        <ul>
+            <b>Unordered List of favourite dishes in Hyderbad</b>
+        <hr>
+            <li>biriyani in Pista house</li>
+            <li>shawarma in DLF</li>
+            <li>haleem at Charminar</li>
+        </ul>
 
     </body>
 </html>
