--- a/mystats.html
+++ b/mystats.html
@@ -5,9 +5,15 @@
     <body>
         <p>I am from Eluru, Andhra Pradesh.
             I had completed my graduation in the year 2020.
-            I had traveled to Hyderbad, chennai, balglore, goa, pondicherry.
+            I had traveled to Vijayawada, Hyderbad, chennai, balglore, goa, pondicherry.
             I had felt different experience in the above while visting cities the major difference are
             food, public transpotaion and resturants.
+        </p>
+        <h1>Biriyani</h1>
+        <p>
+            Biriyani is my favourite foods of all. If i vist different cities first dish i ordered for my lunch is 
+            biriyani. Majorly i like to eat biriyani in Hyderbad with compare of other and because of recpies.
+            i felt biriyani in Hyderbad are much delicious a than other.
         </p>
     </body>
 </html>
