--- a/mystats.html
+++ b/mystats.html
@@ -15,5 +15,7 @@
             biriyani. Majorly i like to eat biriyani in Hyderbad with compare of other and because of recpies.
             i felt biriyani in Hyderbad are much delicious a than other.
         </p>
+        <img src=C:\Users\S567006\Downloads to image file”>
+
     </body>
 </html>
