--- a/mystats.html
+++ b/mystats.html
@@ -15,7 +15,6 @@
             biriyani. Majorly i like to eat biriyani in Hyderbad with compare of other and because of recpies.
             i felt biriyani in Hyderbad are much delicious a than other.
         </p>
-        <img src=C:\Users\S567006\Downloads to image file”>
-
+        <img src=https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-S567006/blob/main/chicken_biryani-hyderabadi.jpg to image file”>
     </body>
 </html>
