--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <li>shawarma in DLF</li>
             <li>haleem at Charminar</li>
         </ul>
-
+        <img src="chicken_biryani-hyderabadi.jpg"
+        height="20" width="15" 
+        alt="a picture of chicken_biryani-hyderabadi">
     </body>
 </html>
