--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
         <img src="chicken_biryani-hyderabadi.jpg"
         height="200" width="150" 
         alt="a picture of chicken_biryani-hyderabadi">
+        <a href=""https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-S567006/blob/main/chicken_biryani-hyderabadi.jpg" mtstats</a>
     </body>
 </html>
