--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
         <img src="chicken_biryani-hyderabadi.jpg"
         height="200" width="150" 
         alt="a picture of chicken_biryani-hyderabadi">
+        <a href="C:\Users\S567006\Documents\webapps-repos\GitHub\44563-webapps-f23-assignment3-S567006">mtstats</a>
     </body>
 </html>
