--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         height="200" width="150" 
         alt="a picture of chicken_biryani-hyderabadi">
         -->
-        <a href="https://github.com/44-563-WebApps-F23/44563-webapps-f23-assignment3-S567006/blob/main/chicken_biryani-hyderabadi.jpg">mtstats</a>
+        <a href="file:///C:/Users/S567006/Documents/webapps-repos/GitHub/44563-webapps-f23-assignment3-S567006/mystats.html">mtstats</a>
     </body>
 </html>
