--- a/index.html
+++ b/index.html
@@ -30,5 +30,35 @@
         alt="a picture of chicken_biryani-hyderabadi">
         -->
         <a href="file:///C:/Users/S567006/Documents/webapps-repos/GitHub/44563-webapps-f23-assignment3-S567006/mystats.html">mtstats</a>
+        <hr>
+        <table>
+            <tr>
+                <tr>
+                   <th>Sport</th>
+                   <th>Reason for recomndated</th>
+                   <th>Number of hours</th> 
+                </tr>
+                <tr>
+                    <td>Chess</td>
+                    <td>Mind game</td>
+                    <td>1 hr</td>
+                </tr>
+                <tr>
+                    <td>Kabadi</td>
+                    <td>guts to play game</td>
+                    <td>1 hr</td>
+                </tr>
+                <tr>
+                    <td>Cricket</td>
+                    <td>intresting in accelating score</td>
+                    <td>3 hr</td>
+                </tr>
+                <tr>
+                    <td>Hockey</td>
+                    <td>pride in indian games</td>
+                    <td>2 hr</td>
+                </tr>
+            </tr>
+        </table>
     </body>
 </html>
