--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
         <h1>Code Display</h1>
         <blockquote>
             <q>Prevent Image Hotlinking stackoverflow ?</q>
-            <a href="https://stackoverflow.com/questions/19656103/prevent-hotlinking-image-files">Display</a>
+            <a href="https://stackoverflow.com/questions/19656103/prevent-hotlinking-image-files">Stackoverflow</a>
         </blockquote>
-        <pre 
+        <pre>
         RewriteEngine On
-        RewriteCond %{HTTP_REFERER} !^http://(.+\.)?yourdomain\.com/ [NC]
-        RewriteCond %{HTTP_REFERER} !^$
-        RewriteRule .*\.(jpg|gif|bmp|png)$ /images/dontsteal.jpg [L]
+         RewriteCond %{HTTP_REFERER} !^http://(.+\.)?yourdomain\.com/ [NC]
+         RewriteCond %{HTTP_REFERER} !^$
+         RewriteRule .*\.(jpg|gif|bmp|png)$ /images/dontsteal.jpg [L]
         Also allow search engines:
           RewriteCond %{HTTP_REFERER} !^http://(.+\.)?mydomain\.com/ [NC]
           RewriteCond %{HTTP_REFERER} !^http://(.+\.)?google\.(.+)/ [NC]
@@ -82,5 +82,6 @@
           RewriteCond %{HTTP_REFERER} !^$
           RewriteRule .*\.(jpe?g|gif|png)$ /transparent.gif [L]
         </pre>
+        <a href="https://css-tricks.com/snippets/htaccess/prevent-image-hotlinking/">check the link</a>
     </body>
 </html>
