--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <h1>Tarun Yada</h1> 
     </head>
     <body>
+        <a href="bouns.html">click the link for Boun.html</a>
         <h6>Hyderbad</h6>
         <p><b>Hyderbad</b> is my favourite vaccation spot.
             Their are so many tourist places and resouts in Hyderbad,
