--- a/mystats.html
+++ b/mystats.html
@@ -15,6 +15,6 @@
             biriyani. Majorly i like to eat biriyani in Hyderbad with compare of other and because of recpies.
             i felt biriyani in Hyderbad are much delicious a than other.
         </p>
-        <img src="chicken_biryani-hyderabadi.jpg" alt="picture of Hyderbad biriyani">
+        <img src="chicken_biryani-hyderabadi.jpg">
     </body>
 </html>
